Projeto dockerizado completo