@@ -9,7 +9,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -19,15 +18,13 @@ public class PropertyGatewayImpl implements PropertyGateway {
 
     @Override
     public Property save(Property property) {
-        PropertyModel model = toModel(property);
-        PropertyModel saved = repository.save(model);
+        PropertyModel saved = repository.save(toModel(property));
         return toEntity(saved);
     }
 
     @Override
     public Optional<Property> findById(String id) {
-        return repository.findById(id)
-                .map(this::toEntity);
+        return repository.findById(id).map(this::toEntity);
     }
 
     @Override
@@ -35,7 +32,7 @@ public class PropertyGatewayImpl implements PropertyGateway {
         return repository.findAll()
                 .stream()
                 .map(this::toEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -46,18 +43,16 @@ public class PropertyGatewayImpl implements PropertyGateway {
         });
     }
 
-    // ===== MAPPERS MANUAIS (por enquanto) =====
-
-    private PropertyModel toModel(Property entity) {
+    private PropertyModel toModel(Property property) {
         return PropertyModel.builder()
-                .id(entity.getId())
-                .title(entity.getTitle())
-                .description(entity.getDescription())
-                .price(entity.getPrice())
-                .rooms(entity.getRooms())
-                .type(entity.getType())
-                .active(entity.getActive())
-                .createdByUserId(entity.getCreatedByUserId())
+                .id(property.getId())
+                .title(property.getTitle())
+                .description(property.getDescription())
+                .price(property.getPrice())
+                .rooms(property.getRooms())
+                .type(property.getType())
+                .active(property.getActive())
+                .createdByUserId(property.getCreatedByUserId())
                 .build();
     }
 
